Implemented more CGP

--- a/CGP/Makefile
+++ b/CGP/Makefile
@@ -4,11 +4,11 @@ GP2_OBJECTS = cgp_init
 OBJECTS := *c ../common_functions.c ../evolutionary_algorithm.c ../generic_operators.c ../utils.c
 CC=gcc
 
-CFLAGS = -I$(INCDIR) -L $(LIBDIR) -O2 -lgp2 -lm -g
+CFLAGS = -I$(INCDIR) -L $(LIBDIR) -O2 -lpgp2 -lm -g
 
 default:	$(OBJECTS)
 		$(foreach var,$(GP2_OBJECTS),-rm -r $(var);		mkdir $(var);		../PGP2/pgp2 -l ../PGP2 -m $(var) -o $(var) $(var).gp2)
-		$(CC) $(OBJECTS) $(CFLAGS) -o cgp
+		$(CC) $(OBJECTS) $(foreach var,$(GP2_OBJECTS), $(var)/*.c) $(CFLAGS) -o cgp
 
 clean:
 		rm cgp
