--- a/EGGP/Makefile
+++ b/EGGP/Makefile
@@ -9,7 +9,7 @@ CFLAGS = -I$(INCDIR) -L $(LIBDIR) -O2 -lgp2 -lm -g
 default:	$(OBJECTS)
 		rm -f -r pgp2;	mkdir pgp2;
 		$(foreach var,$(GP2_OBJECTS),mkdir pgp2/$(var);	echo '$(var) compile'; ../PGP2/bin/gp2 -l ../PGP2 -m $(var) -o pgp2/$(var) $(var).gp2; )
-		$(CC) $(OBJECTS) $(foreach var,$(GP2_OBJECTS), pgp2/$(var)/*.c) $(CFLAGS) -o eggp
+		$(CC) $(OBJECTS) $(foreach var,$(GP2_OBJECTS), pgp2/$(var)/*.c) $(CFLAGS) -o eggp3
 
 clean:
 		rm cgp
